UVM Simulation Sources

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,15 +5,16 @@ SHELL=/bin/bash -o pipefail
 .SHELLFLAGS += -e
 
 HDL_SRCS := $(shell find $(PWD)/core -name '*.sv')
-HVL_SRCS := $(shell find $(PWD)/sim -name '*.sv' -o -name '*.v')
+HVL_SRCS := $(shell find $(PWD)/sim -name '*.sv') $(shell find $(PWD)/sim -name '*.svh')
 SRCS := $(HDL_SRCS) $(HVL_SRCS)
 
 export VCS_ARCH_OVERRIDE=linux
 VCS_FLAGS= -full64 -lca -sverilog +lint=all,noNS -timescale=1ns/1ns -debug_acc+all -kdb -fsdb -suppress=LCA_FEATURES_ENABLED
+INC_DIR=+incdir+$(PWD)/core +incdir+$(PWD)/sim
 
 sim: $(SRCS)
 	mkdir -p out/sim
-	cd out/sim && vcs $(VCS) $(SRCS) $(VCS_FLAGS) -msg_config=../../vcs_warn.config -l compile.log -top top_tb -o top_tb
+	cd out/sim && vcs $(VCS) $(SRCS) $(VCS_FLAGS) $(INC_DIR) -msg_config=../../vcs_warn.config -l compile.log -top top_tb -o top_tb
 
 .PHONY: run_sim
 run_sim: sim
